--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -92,9 +92,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; funkci <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges (Vytvo&#345;it plochu z hran).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Testing.html" title="Testing">Pracovn&iacute; plocha Test Framework</a> slou&#382;&iacute; k lad&#283;n&iacute; FreeCADu. <code>D</code></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Macros">Macros</span></h3>
-</div>
+<p><span id="Macros"></span>
+</p>
+<h3><span class="mw-headline" id="Makra">Makra</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><a href="../Macros.html" title="Macros">Macros</a> are relatively small snippets of <a href="../Python.html" title="Python">Python</a> code that perform a simple or a complex task that is not available in the base FreeCAD system.
 </p>
@@ -166,12 +166,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115163655
+Cached time: 20260115163706
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.189 seconds
+CPU time usage: 0.102 seconds
+Real time usage: 0.153 seconds
 Preprocessor visited node count: 304/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -182,17 +182,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.609      1 -total
- 38.97%    6.082      1 Template:Userdocnavi/cs
- 19.10%    2.981      1 Template:TOCright
- 17.41%    2.718      1 Template:Navigation_menu_2
-  9.66%    1.508      7 Template:Incode
-  9.29%    1.450      2 Template:VersionMinus
-  8.60%    1.343      1 Template:Button
-  8.14%    1.270      3 Template:Version
+100.00%   14.733      1 -total
+ 44.13%    6.501      1 Template:Userdocnavi/cs
+ 15.03%    2.214      1 Template:Navigation_menu_2
+ 10.20%    1.503      3 Template:Version
+ 10.17%    1.499      1 Template:TOCright
+  9.80%    1.444      7 Template:Incode
+  9.44%    1.391      1 Template:Button
+  8.63%    1.271      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163655 and revision id 1738813. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163706 and revision id 1738815. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
