--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -79,7 +79,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> obsahuje 2D n&aacute;stroje a z&aacute;kladn&iacute; 2D a 3D CAD operace.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_Workbench.html" title="FEM Workbench">Pracovn&iacute; plocha FEM</a> poskytuje pracovn&iacute; postup pro anal&yacute;zu kone&#269;n&yacute;ch prvk&#367; (FEA).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Inspection_Workbench.html" title="Inspection Workbench">Pracovn&iacute; plocha Inspection</a> je vytvo&#345;ena tak, aby v&aacute;m poskytla konkr&eacute;tn&iacute; n&aacute;stroje pro zkoum&aacute;n&iacute; tvar&#367;. St&aacute;le se nach&aacute;z&iacute; v ran&eacute; f&aacute;zi v&yacute;voje. <code>D</code></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Material_Workbench.html" title="Material Workbench">Pracovn&iacute; plocha Material</a> zpracov&aacute;v&aacute; syst&eacute;m materi&aacute;l&#367; FreeCADu. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Material_Workbench.html" title="Material Workbench">Pracovn&iacute; plocha Material</a> zpracov&aacute;v&aacute; syst&eacute;m materi&aacute;l&#367; FreeCADu. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Pracovn&iacute; plocha Mesh</a> pro pr&aacute;ci s troj&uacute;heln&iacute;kov&yacute;mi s&iacute;t&#283;mi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">Pracovn&iacute; plocha OpenSCAD</a> pro interoperabilitu s OpenSCADem a opravu historie model&#367; <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; pevn&eacute; geometrie</a> (CSG). <code>D</code></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a> pro pr&aacute;ci s geometrick&yacute;mi primitivy a booleovsk&yacute;mi operacemi.</li></ul>
@@ -166,12 +166,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115163706
+Cached time: 20260115163839
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.153 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.152 seconds
 Preprocessor visited node count: 304/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -182,17 +182,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.733      1 -total
- 44.13%    6.501      1 Template:Userdocnavi/cs
- 15.03%    2.214      1 Template:Navigation_menu_2
- 10.20%    1.503      3 Template:Version
- 10.17%    1.499      1 Template:TOCright
-  9.80%    1.444      7 Template:Incode
-  9.44%    1.391      1 Template:Button
-  8.63%    1.271      2 Template:VersionMinus
+100.00%   16.199      1 -total
+ 49.79%    8.065      1 Template:Userdocnavi/cs
+ 21.35%    3.458      1 Template:Navigation_menu_2
+ 12.21%    1.977      7 Template:Incode
+  9.71%    1.573      1 Template:TOCright
+  8.14%    1.319      3 Template:Version
+  7.34%    1.189      1 Template:Button
+  7.03%    1.139      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163706 and revision id 1738815. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163839 and revision id 1738817. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
