--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -97,11 +97,8 @@
 <h3><span class="mw-headline" id="Makra">Makra</span></h3>
 <p><a href="../Macros.html" title="Macros">Makra</a> jsou relativn&#283; mal&eacute; fragmenty k&oacute;du <a href="../Python.html" title="Python">Pythonu</a>, kter&eacute; prov&aacute;d&#283;j&iacute; jednoduch&eacute; nebo slo&#382;it&eacute; &uacute;koly, kter&eacute; nejsou dostupn&eacute; v z&aacute;kladn&iacute;m syst&eacute;mu programu FreeCAD.
 </p><p>Pokro&#269;il&iacute; u&#382;ivatel&eacute; napsali r&#367;zn&aacute; <a href="../Macros.html" title="Macros">makra</a> pro vylep&scaron;en&iacute; FreeCADu o dal&scaron;&iacute; funkce.
+</p><p>Od verze FreeCAD 0.17 lze mnoho maker nainstalovat pomoc&iacute; <a href="../Std_AddonMgr.html" title="Std AddonMgr">Spr&aacute;vce dopl&#328;k&#367;</a>. Seznam maker najdete na str&aacute;nce <a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a>. Informace o manu&aacute;ln&iacute; instalaci najdete v &#269;l&aacute;nku <a href="../How_to_install_macros.html" title="How to install macros">Jak nainstalovat makra</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Since FreeCAD 0.17, many macros can be installed using the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. For a list of the macros refer to the <a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a> page. For manual installation see <a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a>.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="External_workbenches">External workbenches</span></h3>
 </div>
@@ -161,13 +158,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115164154
+Cached time: 20260115164324
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.192 seconds
-Preprocessor visited node count: 302/1000000
+CPU time usage: 0.108 seconds
+Real time usage: 0.170 seconds
+Preprocessor visited node count: 301/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -177,17 +174,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.112      1 -total
- 41.46%    6.265      1 Template:Userdocnavi/cs
- 15.01%    2.268      1 Template:Navigation_menu_2
- 10.82%    1.635      2 Template:VersionMinus
- 10.80%    1.632      1 Template:TOCright
- 10.07%    1.522      7 Template:Incode
-  9.79%    1.480      1 Template:Button
-  9.28%    1.403      3 Template:Version
+100.00%   16.053      1 -total
+ 36.34%    5.833      1 Template:Userdocnavi/cs
+ 16.45%    2.641      1 Template:TOCright
+ 13.68%    2.196      2 Template:VersionMinus
+ 13.60%    2.184      1 Template:Navigation_menu_2
+ 10.22%    1.641      7 Template:Incode
+  8.81%    1.414      3 Template:Version
+  6.07%    0.974      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164153 and revision id 1738821. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164324 and revision id 1738823. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
