--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -98,10 +98,9 @@
 <p><a href="../Macros.html" title="Macros">Makra</a> jsou relativn&#283; mal&eacute; fragmenty k&oacute;du <a href="../Python.html" title="Python">Pythonu</a>, kter&eacute; prov&aacute;d&#283;j&iacute; jednoduch&eacute; nebo slo&#382;it&eacute; &uacute;koly, kter&eacute; nejsou dostupn&eacute; v z&aacute;kladn&iacute;m syst&eacute;mu programu FreeCAD.
 </p><p>Pokro&#269;il&iacute; u&#382;ivatel&eacute; napsali r&#367;zn&aacute; <a href="../Macros.html" title="Macros">makra</a> pro vylep&scaron;en&iacute; FreeCADu o dal&scaron;&iacute; funkce.
 </p><p>Od verze FreeCAD 0.17 lze mnoho maker nainstalovat pomoc&iacute; <a href="../Std_AddonMgr.html" title="Std AddonMgr">Spr&aacute;vce dopl&#328;k&#367;</a>. Seznam maker najdete na str&aacute;nce <a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a>. Informace o manu&aacute;ln&iacute; instalaci najdete v &#269;l&aacute;nku <a href="../How_to_install_macros.html" title="How to install macros">Jak nainstalovat makra</a>.
+</p><p><span id="External_workbenches"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="External_workbenches">External workbenches</span></h3>
-</div>
+<h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>When many macros or functions are developed together, and are organized in toolbars and menus, they can become a new workbench.
 </p>
@@ -158,12 +157,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115164324
+Cached time: 20260115164340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.170 seconds
+CPU time usage: 0.113 seconds
+Real time usage: 0.169 seconds
 Preprocessor visited node count: 301/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -174,17 +173,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.053      1 -total
- 36.34%    5.833      1 Template:Userdocnavi/cs
- 16.45%    2.641      1 Template:TOCright
- 13.68%    2.196      2 Template:VersionMinus
- 13.60%    2.184      1 Template:Navigation_menu_2
- 10.22%    1.641      7 Template:Incode
-  8.81%    1.414      3 Template:Version
-  6.07%    0.974      1 Template:Button
+100.00%   12.749      1 -total
+ 44.86%    5.719      1 Template:Userdocnavi/cs
+ 17.83%    2.273      1 Template:Navigation_menu_2
+ 11.71%    1.493      7 Template:Incode
+ 11.36%    1.449      1 Template:TOCright
+  9.24%    1.178      3 Template:Version
+  8.38%    1.068      1 Template:Button
+  8.29%    1.057      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164324 and revision id 1738823. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164340 and revision id 1738825. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
