--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -101,10 +101,8 @@
 </p><p><span id="External_workbenches"></span>
 </p>
 <h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>When many macros or functions are developed together, and are organized in toolbars and menus, they can become a new workbench.
+<p>Kdy&#382; je vyvinuto mnoho maker nebo funkc&iacute; najednou a jsou uspo&#345;&aacute;d&aacute;ny do panel&#367; n&aacute;stroj&#367; a nab&iacute;dek, mohou se st&aacute;t nov&yacute;m pracovn&iacute;m prost&#345;ed&iacute;m.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><a href="../External_workbenches.html" title="External workbenches">External workbenches</a> are collections of functions that are not part of the base FreeCAD system, usually developed by experienced users, and targeting a particular need.
 </p>
@@ -157,13 +155,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115164340
+Cached time: 20260115164430
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.169 seconds
-Preprocessor visited node count: 301/1000000
+CPU time usage: 0.118 seconds
+Real time usage: 0.187 seconds
+Preprocessor visited node count: 300/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -173,17 +171,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.749      1 -total
- 44.86%    5.719      1 Template:Userdocnavi/cs
- 17.83%    2.273      1 Template:Navigation_menu_2
- 11.71%    1.493      7 Template:Incode
- 11.36%    1.449      1 Template:TOCright
-  9.24%    1.178      3 Template:Version
-  8.38%    1.068      1 Template:Button
-  8.29%    1.057      2 Template:VersionMinus
+100.00%   14.712      1 -total
+ 41.19%    6.060      1 Template:Userdocnavi/cs
+ 17.86%    2.628      1 Template:Navigation_menu_2
+ 12.34%    1.815      1 Template:TOCright
+ 11.15%    1.640      3 Template:Version
+ 10.92%    1.606      7 Template:Incode
+  9.24%    1.359      1 Template:Button
+  8.14%    1.197      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164340 and revision id 1738825. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164430 and revision id 1738827. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
