--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -102,11 +102,8 @@
 </p>
 <h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
 <p>Kdy&#382; je vyvinuto mnoho maker nebo funkc&iacute; najednou a jsou uspo&#345;&aacute;d&aacute;ny do panel&#367; n&aacute;stroj&#367; a nab&iacute;dek, mohou se st&aacute;t nov&yacute;m pracovn&iacute;m prost&#345;ed&iacute;m.
+</p><p><a href="../External_workbenches.html" title="External workbenches">Extern&iacute; pracovn&iacute; plochy</a> jsou sb&iacute;rky funkc&iacute;, kter&eacute; nejsou sou&#269;&aacute;st&iacute; z&aacute;kladn&iacute;ho syst&eacute;mu FreeCADu, obvykle vyvinut&eacute; zku&scaron;en&yacute;mi u&#382;ivateli a zam&#283;&#345;en&eacute; na konkr&eacute;tn&iacute; pot&#345;ebu.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><a href="../External_workbenches.html" title="External workbenches">External workbenches</a> are collections of functions that are not part of the base FreeCAD system, usually developed by experienced users, and targeting a particular need.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Since FreeCAD 0.17, many workbenches can be installed using the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. For manual installation see <a href="../How_to_install_additional_workbenches.html" title="How to install additional workbenches">How to install additional workbenches</a>.
 </p>
@@ -155,13 +152,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115164430
+Cached time: 20260115164642
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.187 seconds
-Preprocessor visited node count: 300/1000000
+CPU time usage: 0.116 seconds
+Real time usage: 0.247 seconds
+Preprocessor visited node count: 299/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -171,17 +168,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.712      1 -total
- 41.19%    6.060      1 Template:Userdocnavi/cs
- 17.86%    2.628      1 Template:Navigation_menu_2
- 12.34%    1.815      1 Template:TOCright
- 11.15%    1.640      3 Template:Version
- 10.92%    1.606      7 Template:Incode
-  9.24%    1.359      1 Template:Button
-  8.14%    1.197      2 Template:VersionMinus
+100.00%   28.695      1 -total
+ 31.93%    9.161      1 Template:TOCright
+ 29.94%    8.590      1 Template:Userdocnavi/cs
+ 15.63%    4.486      1 Template:Navigation_menu_2
+ 15.24%    4.372      7 Template:Incode
+  8.53%    2.448      3 Template:Version
+  6.38%    1.831      1 Template:Button
+  4.27%    1.224      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164430 and revision id 1738827. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164641 and revision id 1738829. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
